Customize Gradle test tasks