@@ -77,8 +77,61 @@ sourceSets {
     test.resources.srcDirs = ['src/test/resources']
 }
 
-// Specifies that JUnit Platform (a.k.a. JUnit 5)
-// should be used to execute the tests.
+/*
+ * This task will delete ALL files from the test results
+ * root directory defined in JavaPluginConvention.
+ */
+cleanTest {
+    // Returns a file pointing to the root directory of the test results
+    File[] results = project.getConvention()
+            .getPlugin(JavaPluginConvention.class)
+            .testResultsDir.listFiles()
+    /*
+     * Skip cleaning if directory is empty
+     */
+    onlyIf {
+        results.length > 0
+    }
+    delete(results)
+    logger.quiet("Finished cleaning project test results.")
+}
+
 test {
+    // Clean the old test-results first
+    dependsOn cleanTest
+
+    // Specifies that JUnit Platform (a.k.a. JUnit 5)
+    // should be used to execute the tests.
     useJUnitPlatform()
+
+//    // set a system property for the test JVM(s)
+//    systemProperty 'some.prop', 'value'
+
+//    // explicitly include or exclude tests
+//    include 'org/foo/**'
+//    exclude 'org/boo/**'
+
+//    // set JVM arguments for the test JVM(s)
+//    jvmArgs '-XX:MaxPermSize=256m'
+
+//    // show standard out and standard error of the test JVM(s) on the console
+//    testLogging.showStandardStreams = true
+
+    // Fail the 'test' task on the first test failure
+    failFast = false
+
+    doFirst {
+        logger.debug("Running project Unit Tests...")
+    }
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+//    afterTest { descriptor, result ->
+//        logger.lifecycle("Test result: " + result)
+//    }
+    doLast {
+        logger.quiet("Finished running Unit Tests.")
+    }
 }
